AFS_Dev/src/objects/Account_Team_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team Roles</relationshipLabel>
        <relationshipName>Account_Team_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Access__c</fullName>
        <label>Case Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Access__c</fullName>
        <label>Contact Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client QA Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global CAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Portfolio Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Account Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Team Role</label>
    <nameField>
        <displayFormat>Acc Team-{0000000}</displayFormat>
        <label>Account Team Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Team_Member_not_equal_to_Account_Owner</fullName>
        <active>true</active>
        <description>Team Member should not be the same with Account Owner</description>
        <errorConditionFormula>Account__r.Owner.Id   ==  Team_Member__r.Id</errorConditionFormula>
        <errorDisplayField>Team_Member__c</errorDisplayField>
        <errorMessage>Team Member should not be the same with Account Owner</errorMessage>
    </validationRules>
</CustomObject>